消息分成两个文件 服务器与客户端之间消息: OuterMessage.cs  服务器内部: InnerMessage.cs

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -104,8 +104,11 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Entity\Game.cs">
       <Link>Entity\Game.cs</Link>
     </Compile>
-    <Compile Include="..\..\Unity\Assets\Scripts\Entity\Message\Message.cs">
-      <Link>Entity\Message\Message.cs</Link>
+    <Compile Include="..\..\Unity\Assets\Scripts\Entity\Message\InnerMessage.cs">
+      <Link>Entity\Message\InnerMessage.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Entity\Message\OuterMessage.cs">
+      <Link>Entity\Message\OuterMessage.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Entity\Scene.cs">
       <Link>Entity\Scene.cs</Link>
