使用新的对象事件系统,类似Unity的Awake Update, 相比较Unity的事件系统, 这个事件系统可以支持扩展方法,这样就可以支持reload

--- a/Server/Base/Server.Base.csproj
+++ b/Server/Base/Server.Base.csproj
@@ -68,6 +68,9 @@
     <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\MD5Helper.cs">
       <Link>Helper\MD5Helper.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\MethodInfoHelper.cs">
+      <Link>Helper\MethodInfoHelper.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\MongoHelper.cs">
       <Link>Helper\MongoHelper.cs</Link>
     </Compile>
