增加分布式锁组件,用来处理对象镜像在不同服务器时修改数据一致性问题

--- a/Server/Controller/Server.Controller.csproj
+++ b/Server/Controller/Server.Controller.csproj
@@ -40,8 +40,10 @@
     <Compile Include="Component\RealmGateAddressComponent.cs" />
     <Compile Include="Message\C2G_LoginGateHandler.cs" />
     <Compile Include="Message\C2R_PingHandler.cs" />
+    <Compile Include="Message\G2G_LockReleaseRequestHandler.cs" />
     <Compile Include="Message\M2A_ReloadHandler.cs" />
     <Compile Include="Message\C2M_ReloadHandler.cs" />
+    <Compile Include="Message\G2G_LockRequestHandler.cs" />
     <Compile Include="Message\R2G_GetLoginKeyHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Message\C2R_LoginHandler.cs" />
