--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -170,29 +170,20 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Object\Component.cs">
       <Link>Object\Component.cs</Link>
     </Compile>
-    <Compile Include="..\..\Unity\Assets\Scripts\Object\ComponentEventAttribute.cs">
-      <Link>Object\ComponentEventAttribute.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Scripts\Object\ComponentEventManager.cs">
-      <Link>Object\ComponentEventManager.cs</Link>
-    </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Object\Disposer.cs">
       <Link>Object\Disposer.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Object\Entity.cs">
       <Link>Object\Entity.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Object\EntityEventAttribute.cs">
+      <Link>Object\EntityEventAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Object\EntityEventManager.cs">
+      <Link>Object\EntityEventManager.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Object\EntityType.cs">
       <Link>Object\EntityType.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Scripts\Object\IAwake.cs">
-      <Link>Object\IAwake.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Scripts\Object\ILoader.cs">
-      <Link>Object\ILoader.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Scripts\Object\IUpdate.cs">
-      <Link>Object\IUpdate.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Object\Object.cs">
       <Link>Object\Object.cs</Link>
