--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -136,13 +136,10 @@
     <Compile Include="Assets\Scripts\Message\RpcException.cs" />
     <Compile Include="Assets\Scripts\Object\Component.cs" />
     <Compile Include="Assets\Scripts\Object\Disposer.cs" />
-    <Compile Include="Assets\Scripts\Object\ComponentEventAttribute.cs" />
-    <Compile Include="Assets\Scripts\Object\ComponentEventManager.cs" />
+    <Compile Include="Assets\Scripts\Object\EntityEventAttribute.cs" />
+    <Compile Include="Assets\Scripts\Object\EntityEventManager.cs" />
     <Compile Include="Assets\Scripts\Object\Entity.cs" />
     <Compile Include="Assets\Scripts\Object\EntityType.cs" />
-    <Compile Include="Assets\Scripts\Object\IAwake.cs" />
-    <Compile Include="Assets\Scripts\Object\ILoader.cs" />
-    <Compile Include="Assets\Scripts\Object\IUpdate.cs" />
     <Compile Include="Assets\Scripts\Object\Object.cs" />
     <Compile Include="Assets\Scripts\Other\Define.cs" />
     <Compile Include="Assets\Scripts\Other\GameException.cs" />
